namespace GitManager.Core;

public class Account
{
    public string Name { get; set; }
}
