
namespace GitManager.Core
{
    public class GitHubRepositoryManager
    {
        private string token;

        public GitHubRepositoryManager()
        {

        }
        public RepositoryInfo[] GetAllRepositorieas(Account account)
        {

        }

        public bool DeleteRepository(int id)
        {

        }

        public bool ChangeVisibility(int id, RepositoryVisibilityStatus visibility)
        {

        }
    }
}
