using System;
using System.Collections.Generic;
namespace GitManager.Lib
{
   
    public enum RepositoryVisibilityStatus
    {
       PRIVATE,
       PUBLIC
    }
}
